# minsim-inference-api

./: Makefile  docker-compose.yaml  pyproject.toml
src/: main.py
src/models/: model.py
